@@ -85,6 +85,7 @@ description of your problem.
 On Windows <b>98</b> there are problems with the Cygwin Python
 package, which may prevent running LilyPond.  Unfortunately, these
 problems are outside control of the LilyPond development team.
+Windows NT, XP, 2000, 95 and ME should not be unaffected by this.
 
 <p>
 
