@@ -1,3 +1,8 @@
+2004-09-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* site/download/windows.html (href): trimmed w98 note, and move to
+	bottom.
+
 2004-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/about/pubs.html (href): Add Dave Phillips articles.
